# solana-agent-demo

./: .env  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  expands.rs  package.json  slides.md
.github/workflows/: deploy.yml
assets/: ascii.txt
libs/solana-agent/: Cargo.toml
libs/solana-agent/examples/: agent_chat.rs  basic.rs  mcp_client.rs  mcp_client_basic.rs  mcp_server.rs
libs/solana-agent/src/: app.rs  utils.rs
libs/solana-tools/: Cargo.toml
libs/solana-tools/src/: lib.rs
libs/solana-tools/src/solana/: mod.rs  solana_rpc_client.rs  types.rs
libs/solana-tools/src/solana/actions/: create_associated_token_account.rs  create_mint.rs  get_balance.rs  get_block_hash.rs  get_token_accounts.rs  get_transaction.rs  get_wallet_address.rs  mint_to.rs  mod.rs  request_airdrop.rs  transfer.rs
