[workspace]
members = ["libs/*"]
resolver = "2"

[workspace.dependencies]
solana-account-decoder = "2.2.7"
solana-client = "2.2.1"
solana-sdk = "2.2.1"
solana-transaction-status-client-types = "2.2.7"
spl-associated-token-account = "7"
spl-token = "8.0.0"

anyhow = "1.0.98"
chrono = "0.4.41"
color-eyre = "0.6.4"
crossterm = "0.29.0"
dotenvy = "0.15.7"
ratatui = "0.29.0"
rig-core = "0.12.0"
schemars = "0.8.21"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
textwrap = "0.16"
tokio = "1.45.0"
tracing = "0.1"
tracing-subscriber = "0.3.19"
yart = "0.1.1"

solana-agent = { path = "./libs/solana-agent" }
solana-tools = { path = "./libs/solana-tools" }
