[package]
name = "solana-agent"
version = "0.1.0"
edition = "2021"

[lib]
name = "solana_agent"

[dependencies]
solana-client = { workspace = true }
solana-sdk = { workspace = true }

anyhow = { workspace = true }
chrono = { workspace = true }
color-eyre = { workspace = true }
crossterm = { workspace = true }
dotenvy = { workspace = true }
mcp-core = { workspace = true, features = ["sse"] }
ratatui = { workspace = true }
rig-core = { workspace = true, features = ["mcp"]}
serde = { workspace = true }
serde_json = { workspace = true }
textwrap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

solana-tools = { workspace = true }

[[example]]
name = "agent_chat"
path = "examples/agent_chat.rs"

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "mcp_server"
path = "examples/mcp_server.rs"

[[example]]
name = "mcp_client"
path = "examples/mcp_client.rs"
